@@ -2,7 +2,10 @@
 
 [Badges]
 section = BUILD & STUFF
+badge = anothertestplugin
 badge = thisisatestplugin
 formats = html
 -thisisatestplugin_user = Csson
 -thisisatestplugin_repo = p5-test-mojo-trim
+-anothertestplugin_user = Csson
+-anothertestplugin_repo = p5-pod-weaver-section-badges
