@@ -2,6 +2,9 @@ Revision history for Pod-Weaver-Section-Badges
 
 {{$NEXT}}
  [API Changes]
+ - This version has a completely different (and better) way to add badges:
+ - There are now *no* built-in badges, all badges are separate and in the Badge::Depot::Plugin namespace.
+ - There is now *no* way to make on-the-fly custom badges. The api was non-intuitive, and since it is so easy to create a new badge it is now of little use.
 
  [Bug Fixes]
 
@@ -18,6 +21,7 @@ Revision history for Pod-Weaver-Section-Badges
  [Revision]
 
  [Testing]
+ - Changed test to test for multiple badges.
 
 0.0101 2015-02-15T16:24:15Z CET
  [Documentation]
